Апд заднего фона

--- a/week4/style.css
+++ b/week4/style.css
@@ -1,7 +1,7 @@
 
 
 header {
-    background-image: url(pic/astro-astronomy-background-956999.jpg);
+    background-image: url(pic/kosmos.jpg);
     background-size: cover;
     background-repeat: no-repeat;
 }
