--- a/week5/style.css
+++ b/week5/style.css
@@ -183,3 +183,62 @@ a:hover {
   margin-top: 140px;
   text-align: center;
 }
+.forma {
+  display: grid;
+  grid-template-rows: auto auto auto auto;
+  grid-template-columns: auto auto;
+  grid-row-gap: 20px;
+  grid-column-gap: 30px;
+  text-align: center;
+  margin-left: 470px;
+  margin-right: 470px;
+  padding-bottom: 20px;
+}
+.sub {
+  height: 100px;
+  grid-column:1/3;
+  grid-row: 2/3;
+}
+.pole  {
+  background-color: #ffe600;
+  color:white;
+  height: 45px;
+}
+.mes {
+  grid-column:1/3;
+  grid-row: 3/4;
+  height: 180px;
+}
+.send {
+  background-color: #131316;
+  grid-column:1/3;
+  grid-row: 4/5;
+  color: #ffe600;
+  font-size: 20px;
+  border:0px;
+}
+.cont {
+  margin-top: 115px;
+  text-align: center;
+}
+.cont h1 {
+  font-size: 20px;
+  margin-bottom: 35px;
+}
+.cont p {
+  color:#ffe600;
+  margin-bottom: 120px;
+}
+footer{
+  background-color: #131316;
+  height: 100px;
+}
+.foot {
+  display: grid;
+  grid-template-columns: auto auto auto auto auto auto;
+  text-align: center;
+  color: #ffe600;
+  margin-left: 390px;
+  margin-right: 470px;
+  padding-top: 45px;
+}
